@@ -39,14 +39,20 @@ public final class WebCrawlerMain {
     CrawlResultWriter resultWriter = new CrawlResultWriter(result);
     // TODO: Write the crawl results to a JSON file (or System.out if the file name is empty)
    if(!config.getResultPath().isEmpty()){
-     Path p = Paths.get(config.getResultPath());
-     resultWriter.write(p);
+     resultWriter.write(Path.of(config.getResultPath()));
    }else{
      try(Writer writer = new OutputStreamWriter(System.out)) {
        resultWriter.write(writer);
      }
    }
     // TODO: Write the profile data to a text file (or System.out if the file name is empty)
+    if(!config.getProfileOutputPath().isEmpty()){
+      resultWriter.write(Path.of(config.getProfileOutputPath()));
+    }else{
+      try(Writer writer = new OutputStreamWriter(System.out)) {
+        resultWriter.write(writer);
+      }
+    }
   }
 
   public static void main(String[] args) throws Exception {
